# product_test_tracing_system

./: .gitignore  README.md  ensure_repo_pushed_by_ai_agent_commit_message.bat  ensure_repo_pushed_by_ai_agent_commit_message.py  ensure_repo_pushed_by_emergency_commit_message.bat  ensure_repo_pushed_by_emergency_commit_message.py  pyproject.toml  run.cmd  run.py  server_config.json  test.cmd  test.py
app/: auth.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
app/routers/: admin_router.py  auth_router.py  export_router.py  product_test_tester_router.py  submission_router.py  tester_router.py
app/scripts/: cleanup_invalid_companies.py  raw_sample.json  seed_product_test_wifi_ap_e2e.py  seed_sample_data.py  smoke_test_product_test_wifi_ap_e2e.py
app/services/: admin_qc_e2e_service.py  dropdown_option_service.py  excel_export_service.py  form_submission_service.py  product_test_run_service.py  smart_web_restarting_daemon.py  submission_id_service.py  test_result_service.py  ui_sample_profile_service.py
app/templates/: admin_dashboard.html  base.html  join.html  login.html  product_test_cases_admin.html  product_test_environment_definitions_admin.html  (+21 more)
data/: elt_test_tracking_system.db-shm  elt_test_tracking_system.db-wal  product_test_tracking_system.db-shm  product_test_tracking_system.db-wal
docs/: 6th Connectivity Room Network Test Infra.xlsx  Connectivity Room Network Test Tracing System.xlsx  backup.xlsx  plan.md  plan.txt  product_test_operation_guide.md  template.txt  제품 TEST 관리.xlsx
scripts/: run_regression_tests.py
tests/: conftest.py
(+14 files in other folders)
