[project]
name = "elt_test_tracking_system"
version = "0.1.0"
description = "Internal ELT test tracking system MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.31",
    "uvicorn>=0.30.1",
    "watchdog>=4.0.1",
]

[tool.uv]
package = false
