[project]
name = "product_test_tracking_system"
version = "0.1.0"
description = "Internal Product Test tracking system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.9",
    "selenium>=4.0.0",
    "sqlalchemy>=2.0.31",
    "uvicorn>=0.30.1",
    "watchdog>=4.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: DB + service integration (Wi‑Fi AP seed smoke)",
]

[tool.uv]
package = false
